# nh

./: Cargo.toml
.github/workflows/: test.yaml
crates/nh/: Cargo.toml
crates/nh-core/src/: checks.rs  installable.rs
crates/nh-system/: Cargo.toml
crates/nh-system/src/: args.rs  lib.rs  system.rs
crates/nh/src/: interface.rs
docs/: README.md
test/: system.nix
xtask/src/: man.rs
